--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3"
   }
